Fix flex wrap

--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -1,5 +1,6 @@
 .images {
   display: flex;
+  flex-wrap: wrap;
   max-width: 1280px;
   margin: 0 auto;
 
